# typer-mundial-2026

./: .gitignore  CLAUDE.md  GEMINI.md  MUNDIAL_APP.md  README.md  docker-compose.yml
docs/: decisions.md
mundial-backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
mundial-backend/db/: connection.py  dev_seed.py  queries.py
mundial-backend/db/migrations/: 001_init.sql  002_seed_mundial_2026.sql  003_add_crest_url.sql  003_seed_teams_and_matches.sql  004_add_prize_pool.sql  004_add_round_of_32_and_third_place.sql  005_global_bonuses.sql  006_email_verification_tokens.sql  007_team_groups.sql  008_drop_test_fixtures.sql
mundial-backend/domain/: auth.py  bonuses.py  leagues.py  match_results.py  predictions.py  rate_limit.py  scoring.py
mundial-backend/routers/: admin.py  admin_bonus.py  admin_users.py  auth.py  bonus.py  deps.py  leagues.py  matches.py  predictions.py  ranking.py
mundial-backend/schemas/: models.py
mundial-backend/scripts/: migrate.sh
mundial-backend/services/: email.py  football_api.py  translations.py
mundial-backend/tests/: test_admin_api.py  test_admin_bonus_api.py  test_admin_bootstrap.py  test_admin_users_api.py  test_auth.py  test_auth_api.py  test_bonus_api.py  test_bonuses.py  test_email.py  test_league_ranking_api.py  test_leagues.py  test_leagues_api.py  test_matches_api.py  test_predictions_api.py  test_ranking_api.py  test_rate_limit.py  test_scoring.py
mundial-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+2 more)
(+43 files in other folders)
