[project]
name = "mundial-typer-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "resend>=2.30.1",
    "uvicorn>=0.48.0",
]
